[package]
name = "output-tracker"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = """
Track actions done by an outband adapter in software following architectural
patterns like Ports & Adapters, Hexagonal Architecture or A-Frame Architecture
"""
keywords = ["tracking", "adapters", "a-frame", "hexagonal", "architecture"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
non-threadsafe = []
threadsafe = []
asynchronous = []

[dependencies]
thiserror = "1"

[dev-dependencies]
assertor = "0.0.2"

[[example]]
name = "basic"
path = "examples/basic/main.rs"
required-features = ["non-threadsafe"]

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
#rust_2018_idioms = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
#variant_size_differences = "warn"  # enable when working on performance
#missing_docs = "warn"  # uncomment when working on docs

[lints.clippy]
pedantic = "warn"
nursery = "warn"
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
enum_glob_use = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
future_not_send = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "deny", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 } # remove when working on docs
missing_panics_doc = { level = "allow", priority = 1 } # remove when working on docs
