[package]
name = "output-tracker"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.78.0"

description = """
Track and assert state of dependencies in state-based tests without mocks
"""
keywords = ["tracking-state", "state-based-tests", "dependencies", "without-mocks", "nullables"]
categories = ["development-tools::testing", "development-tools::debugging"]

repository = "https://github.com/innoave/output-tracker.git"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
non-threadsafe = []
threadsafe = []

[dependencies]
thiserror = "2"

[dev-dependencies]
asserting = "0.8"
proptest = "1"
version-sync = "0.9"

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
missing_docs = "warn"
variant_size_differences = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "deny"
expect_used = "deny"
future_not_send = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
unwrap_used = "deny"
missing_errors_doc = "allow"  # remove when working on docs
missing_panics_doc = "allow"  # remove when working on docs
